contact.htmlにformタグを追加

--- a/contact.html
+++ b/contact.html
@@ -36,28 +36,30 @@
         </nav>
       </aside>
       <article class="content">
-        <table class="contact">
-          <tr>
-            <th>お名前</th>
-            <td><input class="input_form" type="text" name="name"></td>
-          </tr>
-          <tr>
-            <th>メールアドレス</th>
-            <td><input class="input_form" type="text" name="mail_address"></td>
-          </tr>
-          <tr>
-            <th>性別</th>
-            <td><input type="radio" name="sex" value="男"> 男
-              <input type="radio" name="sex" value="女"> 女</td>
-          </tr>
-          <tr>
-            <th>お問合せ内容</th>
-            <td><textarea class="textarea" name="kanso" rows="4" cols="40"></textarea></td>
-          </tr>
-          <tr>
-            <td colspan="2" align="middle"><a href="#"><input class="buttn" type="submit" value="送信"></a></td>
-          </tr>
-        </table>
+        <form method="post" action="#">
+          <table class="contact">
+            <tr>
+              <th>お名前</th>
+              <td><input class="input_form" type="text" name="name"></td>
+            </tr>
+            <tr>
+              <th>メールアドレス</th>
+              <td><input class="input_form" type="text" name="mail_address"></td>
+            </tr>
+            <tr>
+              <th>性別</th>
+              <td><input type="radio" name="sex" value="男"> 男
+                <input type="radio" name="sex" value="女"> 女</td>
+            </tr>
+            <tr>
+              <th>お問合せ内容</th>
+              <td><textarea class="textarea" name="kanso" rows="4" cols="40"></textarea></td>
+            </tr>
+            <tr>
+              <td colspan="2" align="middle"><a href="#"><input class="buttn" type="submit" value="送信"></a></td>
+            </tr>
+          </table>
+      </form>
       </article>
     </div>
     <footer class="footer">
